--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
             <a href="#" class="navLink"><span>Support</span></a>
         </nav>
     </div>
+    <div class="sideMenuBackground"></div>
     <header>
         <span onclick="window.location='index.html'" class="logo"><img src="logoPNG.png" alt="Logo"><p>PROFI-LHÁZ</p></span>
         <a href="#" class="navLink" id="moreBtn"><span>&#9776;</span></a>
@@ -32,6 +33,34 @@
     <span onclick="window.location='#'" class="toTopBtn">&#129129;<span class="tooltip">Go to top</span></span>
 
     <main>
+        <div class="sectiondiv">
+            <section>
+                <h2>Hello</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
+            </section>
+        </div>
+        <div class="sectiondiv">
+            <section>
+                <h2>Hello</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
+            </section>
+        </div>
+        <div class="sectiondiv">
+            <section>
+                <h2>Hello</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
+            </section>
+        </div>
+        <div class="sectiondiv">
+            <section>
+                <h2>Hello</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
+            </section>
+        </div>
         <div class="sectiondiv">
             <section>
                 <h2>Hello</h2>
