--- a/about.html
+++ b/about.html
@@ -13,83 +13,83 @@
     <div class="intro"><span class="content"><img class="logo" id="logo" src="logo.jpeg" alt="Logo"></span></div>
     <div class="sideMenu">
         <nav>
-            <a href="#" class="navLink" id="closeBtn"><span>&times;</span></a>
-            <a href="index.html" class="navLink"><span>Home</span></a>
-            <a id="active" href="#" class="navLink"><span>About</span></a>
-            <a href="#" class="navLink"><span>Support</span></a>
+            <a class="navLink" id="closeBtn"><span>&times;</span></a>
+            <a href="index.html" class="navLink"><span>Kezdőlap</span></a>
+            <a id="active" class="navLink"><span>Rólunk</span></a>
+            <a href="#" class="navLink"><span>Kontakt</span></a>
         </nav>
     </div>
     <div class="sideMenuBackground"></div>
     <header>
         <span onclick="window.location='index.html'" class="logo"><img src="logoPNG.png" alt="Logo"><p>PROFI-LHÁZ</p></span>
-        <a href="#" class="navLink" id="moreBtn"><span>&#9776;</span></a>
+        <a class="navLink" id="moreBtn"><span>&#9776;</span></a>
         <nav>
-            <a href="index.html" class="navLink"><span>Home</span></a>
-            <a id="active" href="#" class="navLink"><span>About</span></a>
-            <a href="#" class="navLink"><span>Support</span></a>
+            <a href="index.html" class="navLink"><span>Kezdőlap</span></a>
+            <a id="active" class="navLink"><span>Rólunk</span></a>
+            <a href="#" class="navLink"><span>Kontakt</span></a>
             <div class="cursor"></div>
         </nav>
     </header>
-    <span onclick="window.location='#'" class="toTopBtn">&#129129;<span class="tooltip">Go to top</span></span>
+    <span onclick="window.location='#'" class="toTopBtn">&#129129; Az oldal tetejére</span>
 
     <main>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="sectiondiv">
+        <div class="hoverEffect">
             <section>
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
