--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <div class="intro"><span class="content"><img class="logo" id="logo" src="logo.jpeg" alt="Logo"></span></div>
     <div class="sideMenu">
         <nav>
