--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                 ipsum quibusdam nostrum quas amet nobis temporibus expedita architecto reiciendis molestiae, aperiam
                 iste ex nemo, exercitationem obcaecati.</p>
         </section>
+        <div class="hoverEffect">
+            <section>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum nam incidunt dicta qui ex eum voluptate vel ratione enim. Quo nulla assumenda reprehenderit quia aspernatur quos tempora odit earum esse.
+            </section>
+        </div>
+        <div class="hoverEffect">
+            <section>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum nam incidunt dicta qui ex eum voluptate vel ratione enim. Quo nulla assumenda reprehenderit quia aspernatur quos tempora odit earum esse.
+            </section>
+        </div>
     </main>
 
     <script src="app.js"></script>
