--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <nav>
             <a class="navLink" id="closeBtn"><span>&times;</span></a>
             <a href="index.html" class="navLink"><span>Kezdőlap</span></a>
-            <a id="active" class="navLink"><span>Rólunk</span></a>
+            <a id="active" href="about.html" class="navLink"><span>Rólunk</span></a>
             <a href="#" class="navLink"><span>Kontakt</span></a>
         </nav>
     </div>
@@ -25,7 +25,7 @@
         <a class="navLink" id="moreBtn"><span>&#9776;</span></a>
         <nav>
             <a href="index.html" class="navLink"><span>Kezdőlap</span></a>
-            <a id="active" class="navLink"><span>Rólunk</span></a>
+            <a id="active" href="about.html" class="navLink"><span>Rólunk</span></a>
             <a href="#" class="navLink"><span>Kontakt</span></a>
             <div class="cursor"></div>
         </nav>
