--- a/about.html
+++ b/about.html
@@ -33,64 +33,29 @@
     <span onclick="window.location='#'" class="toTopBtn">&#129129; Az oldal tetejére</span>
 
     <main>
-        <div class="hoverEffect">
-            <section>
+        <div class="hoverE card">
+            <section id="HE" class="card-content">
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="hoverEffect">
-            <section>
+        <div class="hoverE card">
+            <section id="HE" class="card-content">
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="hoverEffect">
-            <section>
+        <div class="hoverE card">
+            <section id="HE" class="card-content">
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
             </section>
         </div>
-        <div class="hoverEffect">
-            <section>
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverEffect">
-            <section>
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverEffect">
-            <section>
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverEffect">
-            <section>
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverEffect">
-            <section>
-                <h2>Hello</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
-            </section>
-        </div>
-        <div class="hoverEffect">
-            <section>
+        <div class="hoverE card">
+            <section id="HE" class="card-content">
                 <h2>Hello</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex rerum amet quidem iusto, asperiores aperiam, perferendis eos earum vitae aliquam, rem quos voluptatum non eius. Ipsa est accusamus eligendi voluptates?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio delectus in dolores necessitatibus quae dolor asperiores hic accusamus facere possimus, pariatur provident eos nostrum at, labore corporis quos consequatur reiciendis.</p>
