--- a/index.html
+++ b/index.html
@@ -36,22 +36,57 @@
 
     <main>
         <section>
-            <h1>Hello</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, soluta! Incidunt rerum molestias
-                ipsum quibusdam nostrum quas amet nobis temporibus expedita architecto reiciendis molestiae, aperiam
-                iste ex nemo, exercitationem obcaecati.</p>
+            <h1>Üdv az oldalon</h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae exercitationem omnis consectetur
+                reiciendis rem vel enim eius saepe porro laborum quia, amet ut asperiores quae. Tempore ipsa et
+                similique error?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem consectetur facere quas ipsam voluptas
+                numquam veniam ad, nisi, itaque ratione, iusto dicta a maiores suscipit repellendus perferendis vel illo
+                quia?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat aliquid ullam illum? Nulla nostrum
+                non ipsum, incidunt, inventore excepturi quas esse molestiae libero repellendus veritatis, quod
+                doloremque illo fugit placeat?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus, nihil illum saepe explicabo
+                reiciendis enim voluptatum, harum ullam iure quo doloremque quis perferendis, ex libero impedit nobis
+                quae pariatur unde?
+            </p>
         </section>
-        <div class="hoverEffect">
-            <section>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum nam incidunt dicta qui ex eum voluptate vel ratione enim. Quo nulla assumenda reprehenderit quia aspernatur quos tempora odit earum esse.
+        <div class="hoverE card popup" id="general">
+            <section id="HE" class="card-content">
+                <h2>Generál kivitelezés</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur ea vero, labore, culpa itaque,
+                    beatae iusto quibusdam fuga quod cupiditate molestiae at. Numquam, ipsam? Vitae, eaque soluta. Iure,
+                    repudiandae.</p>
+                <img src="images/general-sample.jpg" class="sample">
+                <p class="hint">Kattintás további infókért</p>
             </section>
         </div>
-        <div class="hoverEffect">
-            <section>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum nam incidunt dicta qui ex eum voluptate vel ratione enim. Quo nulla assumenda reprehenderit quia aspernatur quos tempora odit earum esse.
+        <div class="hoverE card popup" id="szerkezet">
+            <section id="HE" class="card-content">
+                <h2>Szerkezetkész kivitelezés</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima commodi quas repellat in, quos
+                    quod? Beatae necessitatibus saepe quam itaque incidunt ipsam eaque, ad alias, quaerat rem nisi
+                    aspernatur!</p>
+                <img src="images/szerkkesz-sample.jpg" class="sample">
+                <p class="hint">Kattintás további infókért</p>
             </section>
         </div>
     </main>
+
+    <!--popup-->
+    <div id="popup-window">
+        <span id="popup-header">
+            <span class="navLink" id="popup-close"><span>&times;</span></span>
+            <h1 id="popup-title"></h1>
+        </span>
+        <p id="popup-text"></p>
+        <img id="popup-img" class="sample" src="" alt="">
+        <span id="popup-content"></span>
+    </div>
+    <div id="popup-bgfade"></div>
 
     <script src="app.js"></script>
 </body>
