--- a/about.html
+++ b/about.html
@@ -10,23 +10,26 @@
 </head>
 
 <body>
+    <!--Intro-->
     <div class="intro"><span class="content"><img class="logo" id="logo" src="logo.jpeg" alt="Logo"></span></div>
+    <!--SideMenu-->
     <div class="sideMenu">
         <nav>
-            <a class="navLink" id="closeBtn"><span>&times;</span></a>
-            <a href="index.html" class="navLink"><span>Kezdőlap</span></a>
-            <a id="active" href="about.html" class="navLink"><span>Rólunk</span></a>
-            <a href="#" class="navLink"><span>Kontakt</span></a>
+            <a class="navLink" id="closeBtn">&times;</a>
+            <a href="index.html" class="navLink">Kezdőlap</a>
+            <a id="active" href="about.html" class="navLink">Rólunk</a>
+            <a href="#" class="navLink">Kontakt</a>
         </nav>
     </div>
     <div class="sideMenuBackground"></div>
+    <!--Header-->
     <header>
-        <span onclick="window.location='index.html'" class="logo"><img src="logoPNG.png" alt="Logo"><p>PROFI-LHÁZ</p></span>
-        <a class="navLink" id="moreBtn"><span>&#9776;</span></a>
+        <span onclick="window.location='index.html'" class="logo"><img src="logoPNG.png" alt="Logo"><p class="navLink">PROFI-LHÁZ</p></span>
+        <a class="navLink" id="moreBtn">&#9776;</a>
         <nav>
-            <a href="index.html" class="navLink"><span>Kezdőlap</span></a>
-            <a id="active" href="about.html" class="navLink"><span>Rólunk</span></a>
-            <a href="#" class="navLink"><span>Kontakt</span></a>
+            <a href="index.html" class="navLink">Kezdőlap</a>
+            <a id="active" href="about.html" class="navLink">Rólunk</a>
+            <a href="#" class="navLink">Kontakt</a>
             <div class="cursor"></div>
         </nav>
     </header>
