--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <a class="navLink" id="closeBtn">&times;</a>
             <a href="index.html" class="navLink">Kezdőlap</a>
             <a id="active" href="about.html" class="navLink">Rólunk</a>
-            <a href="#" class="navLink">Kontakt</a>
+            <a href="contact.html" class="navLink">Kontakt</a>
         </nav>
     </div>
     <div class="sideMenuBackground"></div>
@@ -31,7 +31,7 @@
         <nav>
             <a href="index.html" class="navLink">Kezdőlap</a>
             <a id="active" href="about.html" class="navLink">Rólunk</a>
-            <a href="#" class="navLink">Kontakt</a>
+            <a href="contact.html" class="navLink">Kontakt</a>
             <div class="cursor"></div>
         </nav>
     </header>
