--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <a class="navLink" id="closeBtn">&times;</a>
             <a id="active" href="index.html" class="navLink">Kezdőlap</a>
             <a href="about.html" class="navLink">Rólunk</a>
-            <a href="#" class="navLink">Kontakt</a>
+            <a href="contact.html" class="navLink">Kontakt</a>
         </nav>
     </div>
     <div class="sideMenuBackground"></div>
     <!--Header-->
     <header>
-        <span onclick="window.location='index.html'" class="logo"><img src="images/logoPNG.png" alt="Logo">
+        <span onclick="window.location='index.html'" class="logo"><img src="images/logoPNG2.png" alt="Logo">
             <p class="navLink">PROFI-LHÁZ</p>
         </span>
         <a class="navLink" id="moreBtn">&#9776;</a>
         <nav>
             <a id="active" href="index.html" class="navLink">Kezdőlap</a>
             <a href="about.html" class="navLink">Rólunk</a>
-            <a href="#" class="navLink">Kontakt</a>
+            <a href="contact.html" class="navLink">Kontakt</a>
             <div class="cursor"></div>
         </nav>
     </header>
@@ -57,29 +57,30 @@
                 quae pariatur unde?
             </p>
         </section>
-        <div id="hehe" style="position: absolute; width: 1rem; height: 1rem; z-index: 30;"></div>
-        <div class="card">
-            <section class="card-content hoverE popup" id="general">
-                <h3>Generál kivitelezés</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur ea vero, labore, culpa itaque,
-                    beatae iusto quibusdam fuga quod cupiditate molestiae at. Numquam, ipsam? Vitae, eaque soluta. Iure,
-                    repudiandae.</p>
-                <img src="images/general-sample.jpg" class="sample">
-                <p class="hint">Kattintás további infókért</p>
-            </section>
-        </div>
-        <div class="card">
-            <section class="card-content hoverE popup" id="szerkezet">
-                <h3>Szerkezetkész kivitelezés</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima commodi quas repellat in, quos
-                    quod? Beatae necessitatibus saepe quam itaque incidunt ipsam eaque, ad alias, quaerat rem nisi
-                    aspernatur!</p>
-                <img src="images/szerkkesz-sample.jpg" class="sample">
-                <p class="hint">Kattintás további infókért</p>
-            </section>
+        <div class="evently">
+            <div class="card">
+                <section class="card-content hoverE popup" id="general">
+                    <h3>Generál kivitelezés</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic tenetur ea vero, labore, culpa itaque,
+                        beatae iusto quibusdam fuga quod cupiditate molestiae at. Numquam, ipsam? Vitae, eaque soluta. Iure,
+                        repudiandae.</p>
+                    <img src="images/general-sample.jpg" class="sample">
+                    <p class="hint">Kattintás további infókért</p>
+                </section>
+            </div>
+            <div class="card">
+                <section class="card-content hoverE popup" id="szerkezet">
+                    <h3>Szerkezetkész kivitelezés</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam minima commodi quas repellat in, quos
+                        quod? Beatae necessitatibus saepe quam itaque incidunt ipsam eaque, ad alias, quaerat rem nisi
+                        aspernatur!</p>
+                    <img src="images/szerkkesz-sample.jpg" class="sample">
+                    <p class="hint">Kattintás további infókért</p>
+                </section>
+            </div>
         </div>
     </main>
-    
+
     <script src="app.js"></script>
 </body>
 
