--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <div class="sideMenuBackground"></div>
     <!--Header-->
     <header>
-        <span onclick="window.location='index.html'" class="logo"><img src="images/logoPNG.png" alt="Logo">
+        <span onclick="window.location='index.html'" class="logo"><img src="images/logoPNG2.png" alt="Logo">
             <p class="navLink">PROFI-LHÁZ</p>
         </span>
         <a class="navLink" id="moreBtn">&#9776;</a>
