--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
             <a href="mailto:email@gmail.com">email@gmail.com</a>
         </section>
     </main>
+    <div class="outdated">Ez a böngésző nem támogatott! :(</div>
 
     <script src="app.js"></script>
 </body>
