--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="images/icon.png">
     <title>PROFI-LHÁZ KFT. - Kezdőlap</title>
 </head>
-
 <body>
     <!--Intro-->
     <div class="intro"><span class="content"><img class="logo" id="logo" src="images/logo.jpeg" alt="Logo"></span></div>
@@ -80,8 +79,8 @@
             </div>
         </div>
     </main>
+    <div class="outdated">Ez a böngésző nem támogatott! :(</div>
 
     <script src="app.js"></script>
 </body>
-
 </html>
