--- a/about.html
+++ b/about.html
@@ -97,6 +97,7 @@
             </div>
         </section>
     </main>
+    <div class="outdated">Ez a böngésző nem támogatott! :(</div>
 
     <script src="app.js"></script>
 </body>
