--- a/about.html
+++ b/about.html
@@ -98,14 +98,9 @@
         </section>
         <h2>Képek</h2>
         <section class="evently gallery">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
-            <img class="hoverE" src="images/background.jpg" alt="">
+                <img class="hoverE" src="images/background.jpg" alt="">
+                <img class="hoverE" src="images/general-sample.jpg" alt="">
+                <img class="hoverE" src="images/szerkkesz-sample.jpg" alt="">
         </section>
 
     </main>
