--- a/about.html
+++ b/about.html
@@ -98,9 +98,12 @@
         </section>
         <h2>Képek</h2>
         <section class="evently gallery">
-                <img class="hoverE" src="images/background.jpg" alt="">
-                <img class="hoverE" src="images/general-sample.jpg" alt="">
-                <img class="hoverE" src="images/szerkkesz-sample.jpg" alt="">
+                <img class="hoverE" id="0" src="images/background.jpg" alt="">
+                <img class="hoverE" id="1" src="images/general-sample.jpg" alt="">
+                <img class="hoverE" id="2" src="images/szerkkesz-sample.jpg" alt="">
+                <img class="hoverE" id="3" src="images/background.jpg" alt="">
+                <img class="hoverE" id="4" src="images/general-sample.jpg" alt="">
+                <img class="hoverE" id="5" src="images/szerkkesz-sample.jpg" alt="">
         </section>
 
     </main>
